Refactoring(firts try) and infinity moving

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,1 @@
-﻿@* <canvas id="maincanvas" width="400" height="400" style="border: 1px solid black"></canvas> *@
-<script src="~/js/site.js">
-</script>
+﻿<script src="~/js/site.js"></script>
