--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MvcMovie
-@using MvcMovie.Models
+﻿@using Agar.io_Alpfa
+@using Agar.io_Alpfa.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
