--- a/Views/Waiting/Waiting.cshtml
+++ b/Views/Waiting/Waiting.cshtml
@@ -7,4 +7,4 @@
 	<input type="hidden" name="Name" value="@Name" />
 </form>
 
-<script src="~/js/Waiting.js" />
+<script src="~/js/Waiting.js"></script>
