--- a/Views/Game/EndGame.cshtml
+++ b/Views/Game/EndGame.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    string Title = "Aboba";
+    string Title = "Смерть";
 }
 <!DOCTYPE html>
 <html>
@@ -7,5 +7,8 @@
     <meta charset="utf-8" />
     <title>@Title</title>
 </head>
-<body></body>
+<body>
+
+    <h1>@Title</h1>
+</body>
 </html>
