--- a/Views/Game/Game.cshtml
+++ b/Views/Game/Game.cshtml
@@ -3,8 +3,8 @@
 	string name = ViewBag.Name;
 }
 <script>
-	window.MAPWIDTH = @Rules.MapWidth
-	window.MAPHEIGHT = @Rules.MapWidth
+	window.MAPWIDTH = @Rules.MapSize
+	window.MAPHEIGHT = @Rules.MapSize
 	window.NAME = '@name'
 </script>
 <script src="~/js/Game.js"></script>
