--- a/Views/Voting/Voting.cshtml
+++ b/Views/Voting/Voting.cshtml
@@ -67,7 +67,6 @@
 			<option value="large">Большая</option>
 		</select>
 	</div>
-
 	<div class="form-group">
 		<label for="speed">Скорость игры</label>
 		<select id="speed" name="speed">
@@ -77,7 +76,7 @@
 		</select>
 	</div>
 	<form asp-action="RedirectToWaiting" asp-controller="Voting" method="post">
-		<input value="@name" name="Name" class="form-control"/>
+		<input type="hidden" value="@name" name="Name" class="form-control"/>
 		<button type="submit" id="voteButton" class="btn">Проголосовать</button>
 	</form>
 	<script>
